@@ -21,6 +21,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   b - fix stale job-exclusive state when restarting pbs_server
   b - don't fall over when duplicate subnodes are assigned after suspend-resume
   b - handle suspended jobs correctly when restarting pbs_server
+  b - allow long host lists in runjob request
 
 2.1.1
 
